--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.37.6"
   }
 }
