--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
